--- a/ios-clientes/Base.lproj/Main.storyboard
+++ b/ios-clientes/Base.lproj/Main.storyboard
@@ -60,6 +60,9 @@
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonEntrar:" destination="HwH-Vp-uYK" eventType="touchUpInside" id="fm3-O3-eTE"/>
+                                </connections>
                             </button>
                             <textField clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="usuario" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-uG-gYM" customClass="BVRutTextField">
                                 <rect key="frame" x="20" y="425" width="107" height="28"/>
@@ -78,13 +81,19 @@
                                     <action selector="textFieldReturn:" destination="HwH-Vp-uYK" eventType="editingDidEndOnExit" id="otA-aU-5LF"/>
                                 </connections>
                             </textField>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="K7q-q3-We3">
+                                <rect key="frame" x="142" y="420" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="K7q-q3-We3" firstAttribute="leading" secondItem="hZ8-6B-oSo" secondAttribute="leading" constant="142" id="1Qh-tM-5FV"/>
                             <constraint firstItem="Lyx-uG-gYM" firstAttribute="leading" secondItem="hZ8-6B-oSo" secondAttribute="leading" constant="20" id="303-zk-CoG"/>
                             <constraint firstAttribute="bottom" secondItem="KCz-Td-5Wk" secondAttribute="bottom" constant="27" id="DxY-af-Yfa"/>
                             <constraint firstAttribute="bottom" secondItem="Lyx-uG-gYM" secondAttribute="bottom" constant="27" id="UZf-HM-Bv4"/>
                             <constraint firstItem="KCz-Td-5Wk" firstAttribute="leading" secondItem="Lyx-uG-gYM" secondAttribute="trailing" constant="4" id="Z2H-a2-xN8"/>
+                            <constraint firstAttribute="bottom" secondItem="K7q-q3-We3" secondAttribute="bottom" constant="23" id="rgl-rz-8Hg"/>
                             <constraint firstAttribute="bottom" secondItem="226-SN-hgY" secondAttribute="bottom" constant="28" id="txA-Tx-3yp"/>
                             <constraint firstItem="226-SN-hgY" firstAttribute="leading" secondItem="KCz-Td-5Wk" secondAttribute="trailing" constant="4" id="ygI-bj-Qpr"/>
                         </constraints>
@@ -94,6 +103,7 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
                         <outlet property="UIButtonEntrar" destination="226-SN-hgY" id="u6C-Ti-vHr"/>
+                        <outlet property="activityIndicatorCargando" destination="K7q-q3-We3" id="tvq-HB-0g6"/>
                         <outlet property="textFieldPassword" destination="KCz-Td-5Wk" id="gp7-Xj-b1x"/>
                         <outlet property="textFieldUsuario" destination="Lyx-uG-gYM" id="07G-hs-5Ac"/>
                     </connections>
@@ -107,12 +117,14 @@
         <class className="BVLoginViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BVLoginViewController.h"/>
             <relationships>
+                <relationship kind="action" name="buttonEntrar:"/>
                 <relationship kind="action" name="slideFrameDown"/>
                 <relationship kind="action" name="slideFrameUp"/>
                 <relationship kind="action" name="textFieldReturn:"/>
                 <relationship kind="outlet" name="UIButtonEntrar" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="activityIndicatorCargando" candidateClass="UIActivityIndicatorView"/>
                 <relationship kind="outlet" name="textFieldPassword" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="textFieldUsuario" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="textFieldUsuario" candidateClass="BVRutTextField"/>
             </relationships>
         </class>
         <class className="BVRutTextField" superclassName="UITextField">
