--- a/ios-clientes/Base.lproj/Main.storyboard
+++ b/ios-clientes/Base.lproj/Main.storyboard
@@ -30,72 +30,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KCz-Td-5Wk">
-                                <rect key="frame" x="131" y="425" width="107" height="28"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0mS-uN-dIB">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="1ER-pH-kwp"/>
-                                    <constraint firstAttribute="width" constant="107" id="Tda-ba-fGm"/>
-                                </constraints>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                                <connections>
-                                    <action selector="slideFrameDown" destination="HwH-Vp-uYK" eventType="editingDidEnd" id="Y2e-LG-J0C"/>
-                                    <action selector="slideFrameUp" destination="HwH-Vp-uYK" eventType="editingDidBegin" id="qD8-sf-K8F"/>
-                                    <action selector="textFieldReturn:" destination="HwH-Vp-uYK" eventType="editingDidEndOnExit" id="yBE-V1-srG"/>
-                                </connections>
-                            </textField>
-                            <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="226-SN-hgY">
-                                <rect key="frame" x="242" y="425" width="58" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.30798532209319146" green="0.80548469387755106" blue="0.071899233846048488" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="27" id="5Q7-Hs-oG8"/>
-                                    <constraint firstAttribute="width" constant="58" id="kOk-iN-e0n"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                                <state key="normal" title="Entrar">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="buttonEntrar:" destination="HwH-Vp-uYK" eventType="touchUpInside" id="fm3-O3-eTE"/>
-                                </connections>
-                            </button>
-                            <textField clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="usuario" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-uG-gYM" customClass="BVRutTextField">
-                                <rect key="frame" x="20" y="425" width="107" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="rp3-la-rVC"/>
-                                    <constraint firstAttribute="width" constant="107" id="x77-Ck-Zgb"/>
-                                </constraints>
-                                <color key="textColor" red="1" green="1" blue="0.99084739963503654" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="slideFrameDown" destination="HwH-Vp-uYK" eventType="editingDidEnd" id="OPN-NX-TZS"/>
-                                    <action selector="slideFrameUp" destination="HwH-Vp-uYK" eventType="editingDidBegin" id="exZ-XX-p28"/>
-                                    <action selector="textFieldReturn:" destination="HwH-Vp-uYK" eventType="editingDidEndOnExit" id="otA-aU-5LF"/>
-                                </connections>
-                            </textField>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="K7q-q3-We3">
-                                <rect key="frame" x="142" y="420" width="37" height="37"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </activityIndicatorView>
+                                <subviews>
+                                    <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="226-SN-hgY">
+                                        <rect key="frame" x="242" y="410" width="58" height="40"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.30798532209319146" green="0.80548469387755106" blue="0.071899233846048488" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                        <state key="normal" title="Entrar">
+                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="buttonEntrar:" destination="HwH-Vp-uYK" eventType="touchUpInside" id="fm3-O3-eTE"/>
+                                        </connections>
+                                    </button>
+                                    <textField clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="usuario" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-uG-gYM" customClass="BVRutTextField">
+                                        <rect key="frame" x="20" y="410" width="107" height="40"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="textColor" red="1" green="1" blue="0.99084739963503654" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="textFieldReturn:" destination="HwH-Vp-uYK" eventType="editingDidEndOnExit" id="otA-aU-5LF"/>
+                                        </connections>
+                                    </textField>
+                                    <textField clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KCz-Td-5Wk">
+                                        <rect key="frame" x="131" y="410" width="107" height="40"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <connections>
+                                            <action selector="textFieldReturn:" destination="HwH-Vp-uYK" eventType="editingDidEndOnExit" id="yBE-V1-srG"/>
+                                        </connections>
+                                    </textField>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="K7q-q3-We3">
+                                        <rect key="frame" x="142" y="411" width="37" height="37"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="K7q-q3-We3" firstAttribute="leading" secondItem="hZ8-6B-oSo" secondAttribute="leading" constant="142" id="1Qh-tM-5FV"/>
-                            <constraint firstItem="Lyx-uG-gYM" firstAttribute="leading" secondItem="hZ8-6B-oSo" secondAttribute="leading" constant="20" id="303-zk-CoG"/>
-                            <constraint firstAttribute="bottom" secondItem="KCz-Td-5Wk" secondAttribute="bottom" constant="27" id="DxY-af-Yfa"/>
-                            <constraint firstAttribute="bottom" secondItem="Lyx-uG-gYM" secondAttribute="bottom" constant="27" id="UZf-HM-Bv4"/>
-                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="leading" secondItem="Lyx-uG-gYM" secondAttribute="trailing" constant="4" id="Z2H-a2-xN8"/>
-                            <constraint firstAttribute="bottom" secondItem="K7q-q3-We3" secondAttribute="bottom" constant="23" id="rgl-rz-8Hg"/>
-                            <constraint firstAttribute="bottom" secondItem="226-SN-hgY" secondAttribute="bottom" constant="28" id="txA-Tx-3yp"/>
-                            <constraint firstItem="226-SN-hgY" firstAttribute="leading" secondItem="KCz-Td-5Wk" secondAttribute="trailing" constant="4" id="ygI-bj-Qpr"/>
+                            <constraint firstItem="0mS-uN-dIB" firstAttribute="top" secondItem="hZ8-6B-oSo" secondAttribute="top" id="Nz1-VK-XvC"/>
+                            <constraint firstItem="0mS-uN-dIB" firstAttribute="bottom" secondItem="hZ8-6B-oSo" secondAttribute="bottom" id="kAj-r5-kJK"/>
+                            <constraint firstItem="0mS-uN-dIB" firstAttribute="leading" secondItem="hZ8-6B-oSo" secondAttribute="leading" id="nxD-tI-HFY"/>
+                            <constraint firstAttribute="trailing" secondItem="0mS-uN-dIB" secondAttribute="trailing" id="yfM-Oe-lvk"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
@@ -104,6 +90,7 @@
                     <connections>
                         <outlet property="UIButtonEntrar" destination="226-SN-hgY" id="u6C-Ti-vHr"/>
                         <outlet property="activityIndicatorCargando" destination="K7q-q3-We3" id="tvq-HB-0g6"/>
+                        <outlet property="scrollViewContenedor" destination="0mS-uN-dIB" id="vxA-ku-ykb"/>
                         <outlet property="textFieldPassword" destination="KCz-Td-5Wk" id="gp7-Xj-b1x"/>
                         <outlet property="textFieldUsuario" destination="Lyx-uG-gYM" id="07G-hs-5Ac"/>
                     </connections>
@@ -118,11 +105,10 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BVLoginViewController.h"/>
             <relationships>
                 <relationship kind="action" name="buttonEntrar:"/>
-                <relationship kind="action" name="slideFrameDown"/>
-                <relationship kind="action" name="slideFrameUp"/>
                 <relationship kind="action" name="textFieldReturn:"/>
                 <relationship kind="outlet" name="UIButtonEntrar" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="activityIndicatorCargando" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="scrollViewContenedor" candidateClass="UIScrollView"/>
                 <relationship kind="outlet" name="textFieldPassword" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="textFieldUsuario" candidateClass="BVRutTextField"/>
             </relationships>
